feat: add contact-form package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
+      "@netspective-labs/contact-form": [
+        "packages/form/contact-form/src/index.ts"
+      ],
       "@netspective-labs/nlc-nodejs-astro": [
         "packages/nodejs/astro/src/index.js"
       ],
