--- a/packages/form/contact-form/package.json
+++ b/packages/form/contact-form/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@netspective-labs/nlc-contact-form",
+  "name": "form-contact-form",
   "version": "0.0.5",
   "type": "commonjs",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/netspective-labs/commons/nlc-contact-form.git",
+    "url": "git+https://github.com/Rameesa96/commons/contact-form.git",
     "directory": "packages/contact-form/form"
   },
   "publishConfig": {
