--- a/packages/form/contact-form/project.json
+++ b/packages/form/contact-form/project.json
@@ -17,7 +17,8 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd packages/form/contact-form/npm && npm publish"
+        "command": "node tools/scripts/publish.mjs form-contact-form {args.ver} {args.tag}",
+        "args": "--ver='0.0.5' --tag='latest'"
       },
       "dependsOn": ["build"]
     },
