--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@netspective-labs/contact-form": [
         "packages/form/contact-form/src/index.ts"
       ],
+      "@netspective-labs/form": ["packages/form/form/src/index.ts"],
       "@netspective-labs/nlc-nodejs-astro": [
         "packages/nodejs/astro/src/index.js"
       ],
