--- a/packages/form/form/project.json
+++ b/packages/form/form/project.json
@@ -18,9 +18,15 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "node tools/scripts/publish.mjs form-form {args.ver} {args.tag}",
-        "args": "--ver='0.0.11' --tag='latest'"
+        "args": "--ver='0.0.12' --tag='latest'"
       },
       "dependsOn": ["build"]
+    },
+    "configurations": {
+      "ci": {
+        "ci": true,
+        "codeCoverage": true
+      }
     },
     "lint": {
       "executor": "@nx/linter:eslint",
