--- a/packages/form/form/project.json
+++ b/packages/form/form/project.json
@@ -17,8 +17,8 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs form-form {args.ver} {args.tag}",
-        "args": "--ver='0.0.14' --tag='latest'"
+        "command": "cd packages/form/form/npm && npm publish",
+        "args": "--ver='0.0.15' --tag='latest'"
       },
       "dependsOn": ["build"]
     },
