--- a/packages/form/form/project.json
+++ b/packages/form/form/project.json
@@ -17,7 +17,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd packages/form/form/npm && npm publish",
+        "command": "cd packages/form/form  && npm ci && npm publish --tag latest && rm -rf node_modules",
         "args": "--ver='0.0.15' --tag='latest'"
       },
       "dependsOn": ["build"]
