--- a/packages/form/form/project.json
+++ b/packages/form/form/project.json
@@ -6,7 +6,7 @@
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": ["{options.outputPath} /**/*"],
       "options": {
         "outputPath": "dist/packages/form/form",
         "main": "packages/form/form/src/index.ts",
@@ -17,7 +17,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "cd packages/form/form  && npm && npm publish --tag latest && rm -rf node_modules",
+        "command": "node tools/scripts/publish.mjs form-form {args.ver} {args.tag}",
         "args": "--ver='0.0.15' --tag='latest'"
       },
       "dependsOn": ["build"]
@@ -30,7 +30,7 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs":["{options.outputPath}/**/*"],
       "options": {
         "lintFilePatterns": ["packages/form/form/**/*.ts"]
       }
