chore: add contact-form package

--- a/nx.json
+++ b/nx.json
@@ -41,5 +41,15 @@
         "cacheableOperations": ["build", "lint", "test", "e2e", "check"]
       }
     }
+  },
+  "generators": {
+    "@nx/react": {
+      "application": {
+        "babel": true
+      },
+      "library": {
+        "unitTestRunner": "vitest"
+      }
+    }
   }
 }
