chore: add a sample package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,7 @@
       "@netspective-labs/nlc-nodejs-webc": [
         "packages/nodejs-user-agent/webc/src/index.ts"
       ],
+      "@netspective-labs/webc": ["packages/form/webc/src/index.ts"],
       "netspective-labs/nlc-nodejs-remarkk": [
         "packages/nodejs/remarkk/src/index.ts"
       ]
