--- a/packages/form/form/package.json
+++ b/packages/form/form/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@rameesa96/form",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "type": "commonjs",
-  "main":"./src/index.ts",
+  "main": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rameesa96/commons/form.git",
@@ -15,5 +15,8 @@
   ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.14"
   }
 }
