--- a/packages/form/form/tsconfig.spec.json
+++ b/packages/form/form/tsconfig.spec.json
@@ -15,5 +15,5 @@
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
     "src/**/*.d.ts"
-, "src/components/Form.js"  ]
+, "src/components/Form.ts"  ]
 }
