--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
-      "@Rameesa96/commons": ["packages/reactions/thumbsup/src/index.ts"],
+      "rameesa96/reactions": ["packages/reactions/thumbsup/src/index.ts"],
       "@netspective-labs/contact-form": [
         "packages/form/contact-form/src/index.ts"
       ],
