chore: update reactions package

--- a/packages/Reactions/thumbsup/package.json
+++ b/packages/Reactions/thumbsup/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@rameesa96/commons",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rameesa96/commons/thumbsup.git",
-    "directory": "packages/form/form"
+    "directory": "packages/reactions/thumbsup"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
