--- a/packages/Reactions/math-helpers/project.json
+++ b/packages/Reactions/math-helpers/project.json
@@ -17,7 +17,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs reactions--math-helpers {args.ver} {args.tag}",
+        "command": "node tools/scripts/publish.mjs reactions-math-helpers {args.ver} {args.tag}",
         "args": "--ver='0.0.1' --tag='latest'"
       },
       "dependsOn": [
